# openfx

./: .clang-format  .dir-locals.el  .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  Makefile  README.md  SECURITY.md  STANDARD_PROCESS.md  conanfile.py  install.md  ofxMultiThread.h  pyproject.toml  readme-ofxa.md  readme.md  release-notes-next.md  release-notes.md  requirements.txt
.github/: ISSUE_TEMPLATE.md  (+1 more)
Examples/: CMakeLists.txt  Info.plist.in  Makefile  Makefile.master  MakefileOSX  README.txt  ofxTestLog-Nuke.txt  ofxTestLog-Tuttle.txt
Examples/Basic/: Basic_2005.sln  Basic_2005.vcproj  Makefile  MakefileOSX  basic.cpp
Examples/ChoiceParams/: Info.plist  Makefile  MakefileOSX  choiceparams.cpp
Examples/ColorSpace/: Info.plist  colorspace.cpp
Examples/ColourSpace/: Info.plist  Makefile  colourspace.cpp
Examples/Custom/: Custom_2005.sln  Custom_2005.vcproj  Info.plist  Makefile  MakefileOSX  custom.cpp
Examples/DepthConverter/: DepthConverter_2005.sln  DepthConverter_2005.vcproj  Info.plist  Makefile  MakefileOSX  depthConverter.cpp
Examples/DrawSuite/: DrawSuite_2005.sln  DrawSuite_2005.vcproj  Info.plist  Makefile  MakefileOSX  drawsuite.cpp
Examples/Examples.xcodeproj/: project.pbxproj
Examples/GPUGain/: CMakeLists.txt  GPUGain.cpp  GPUGain.h  Makefile  MetalKernel.mm  OpenCLKernel.cpp
Examples/GainPlugin/: CudaKernel.cu  GainPlugin.cpp  GainPlugin.h  GainPlugin.sln  GainPlugin.vcxproj  Makefile  OpenCLKernel.cpp
Examples/GainPlugin/GainPlugin.xcodeproj/: project.pbxproj
Examples/Invert/: Info.plist  Invert_2005.sln  Invert_2005.vcproj  Makefile  MakefileOSX  invert.cpp
Examples/OpenGL/: Info.plist  Makefile  MakefileOSX  opengl.cpp
Examples/Overlay/: Info.plist  Makefile  MakefileOSX  Overlay_2005.sln  Overlay_2005.vcproj  overlay.cpp
Examples/Rectangle/: Makefile  MakefileOSX  Rectangle_2005.sln  Rectangle_2005.vcproj  rectangle.cpp
Examples/Test/: Makefile  MakefileOSX  Test_2005.sln  Test_2005.vcproj  ofxLog.H  ofxLog.cpp  testProperties.cpp
Examples/TestProps/: Info.plist  testProperties.cpp
Examples/XML/: example.xml
Examples/include/: ofxSpdlogCompat.h  ofxUtilities.H  osxDeploy.sh
HostSupport/: BUILDING  CMakeLists.txt  HostSupport.sln  HostSupport.vcproj  Makefile  README  README.md  TTD  hostsupport.sln  hostsupport.vcproj
HostSupport/HostSupport.xcodeproj/: project.pbxproj
HostSupport/examples/: CacheDemo.vcproj  Makefile  cacheDemo.cpp  hostDemo.cpp  hostDemo.vcproj  hostDemoClipInstance.cpp  hostDemoClipInstance.h  hostDemoEffectInstance.cpp  hostDemoEffectInstance.h  hostDemoHostDescriptor.cpp  hostDemoHostDescriptor.h  hostDemoParamInstance.cpp  hostDemoParamInstance.h  hostDemoParamSetInstance.cpp  hostDemoParamSetInstance.h
HostSupport/expat-2.0.1/: Makefile  config.status  libexpat.la  libtool
HostSupport/expat-2.0.1/.libs/: libexpat.lai
HostSupport/expat-2.0.1/amiga/: expat_lib.c  expat_vectors.c  launch.c  stdlib.c
HostSupport/expat-2.0.1/lib/: expat_static.vcproj  xmlparse.lo  xmlrole.lo  xmltok.lo  xmltok_impl.h
HostSupport/expat-2.0.1/xmlwf/: xmlwf
HostSupport/expat-2.1.0/xmlwf/: xmlwf.c
HostSupport/expat-2.2.0/lib/: expat_static.vcproj
HostSupport/include/: ofxhBinary.h  ofxhClip.h  ofxhHost.h  ofxhImageEffect.h  ofxhImageEffectAPI.h  ofxhInteract.h  ofxhMemory.h  ofxhParam.h  ofxhPluginAPICache.h  ofxhPluginCache.h  ofxhProgress.h  ofxhPropertySuite.h  ofxhTimeLine.h  ofxhUtilities.h  ofxhXml.h
HostSupport/src/: ofxhBinary.cpp  ofxhClip.cpp  ofxhHost.cpp  ofxhImageEffect.cpp  ofxhImageEffectAPI.cpp  ofxhInteract.cpp  ofxhMemory.cpp  ofxhParam.cpp  ofxhPluginAPICache.cpp  ofxhPluginCache.cpp  ofxhPropertySuite.cpp  ofxhUtilities.cpp
Support/: CMakeLists.txt  LICENSE  README  TODO  support.doxy
Support/OSXStaticLoader/: Makefile  pluginLoader.cpp
Support/Plugins/: CMakeLists.txt  ExamplePlugs.sln  Makefile  Makefile.master
Support/Plugins/Basic/: Makefile  basic.cpp  basic.dsp  basic.dsw  basic.vcproj
Support/Plugins/ChoiceParams/: Makefile  choiceparams.cpp
Support/Plugins/Field/: Makefile  field.cpp  field.vcproj
Support/Plugins/GPUGain/: CudaKernel.cu  GPUGain.cpp  GPUGain.h  GPUGain.sln  GPUGain.vcxproj  Info.plist  MetalKernel.mm
Support/Plugins/Generator/: Info.plist  Makefile  noise.cpp  noise.dsp  noise.dsw  noise.vcproj  randomGenerator.H  randomGenerator.cpp
Support/Plugins/Invert/: Makefile  invert.cpp  invert.vcproj
Support/Plugins/MakiFX/: Makefile
Support/Plugins/MultiBundle/: Info.plist  Makefile  PluginRegistration.cpp  multibundle.vcproj  multibundle1.cpp  multibundle1.h  multibundle2.cpp  multibundle2.h
Support/Plugins/Retimer/: Makefile  retimer.cpp  retimer.dsp  retimer.dsw  retimer.vcproj
Support/Plugins/Tester/: Info.plist  Makefile  Tester.cpp  Tester.vcproj
Support/Plugins/Transition/: Makefile  crossFade.cpp  crossFade.dsp  crossFade.dsw  crossFade.vcproj
Support/Plugins/include/: README  ofxsImageBlender.H  ofxsProcessing.H
Support/PropTester/: CMakeLists.txt  Info.plist  Makefile  ofxTestLog.txt  propTester.cpp  propTester.dsp  propTester.dsw  propTester.vcproj
Support/Support.xcodeproj/: project.pbxproj
Support/include/: ofxPropsAccess.h  ofxPropsBySet.h  ofxPropsMetadata.h  ofxsColorSpace.h  ofxsCore.H  ofxsCore.h  ofxsHWNDInteract.h  ofxsImageEffect.H  ofxsImageEffect.h  ofxsInteract.H  ofxsInteract.h  ofxsLog.H  ofxsLog.h  ofxsMemory.H  ofxsMemory.h  ofxsMessage.H  ofxsMessage.h  ofxsMultiThread.H  ofxsMultiThread.h  ofxsParam.H  ofxsParam.h  ofxsProcessing.h  osxDeploy.sh  osxSymbols
contrib/colour/: CMakeLists.txt  README.md  ofxColourConvert.h
contrib/colour/tests/: .gitignore  README.md  conanfile.txt  pcons-build.py  test_colour_convert.cpp
contrib/plugins/: CMakeLists.txt
contrib/plugins/MyFirstPlugin/: CMakeLists.txt  brightness.cpp
contrib/plugins/TestFilter/: CMakeLists.txt  README.md  testfilter.cpp
contrib/plugins/TestGenerator/: CMakeLists.txt  README.md  testgenerator.cpp
(+812 files in other folders)
