set(PLUGIN GPUGain)
if (OFX_SUPPORTS_OPENGLRENDER)
  file(GLOB_RECURSE PLUGIN_SOURCES "*.cpp")
  if (NOT OFX_SUPPORTS_OPENCLRENDER)
    list(FILTER PLUGIN_SOURCES EXCLUDE REGEX "OpenCLKernel")
  endif()
  if (OFX_SUPPORTS_CUDARENDER)
    list(APPEND PLUGIN_SOURCES "CUDAKernel.cu")
  endif()
  if(APPLE)
    file(GLOB_RECURSE PLUGIN_SOURCES "*.mm") # add Metal kernel
  endif()

  set(TGT example-${PLUGIN})
  add_ofx_plugin(${TGT} ${PLUGIN})
  target_sources(${TGT} PUBLIC ${PLUGIN_SOURCES})
  target_include_directories(${TGT} PUBLIC ${OFX_HEADER_DIR} ${OFX_SUPPORT_HEADER_DIR})
  target_link_libraries(${TGT} ${CONAN_LIBS} OfxSupport opengl::opengl)
  if(APPLE)
    target_link_libraries(${TGT} "-framework Metal" "-framework Foundation" "-framework QuartzCore")
  endif()
endif()
